# Judge-Legacy

./: .gitignore  Gemfile  Rakefile  Readme.md  SConstruct  build.sh
config/: config.yml  environment.rb
lib/: Const.rb  Executor.rb  dispatch.rb  judge.rb  pluginConfig.rb  server_controller.rb
lib/model/: database.rb  judge_status.rb
src/: CMakeLists.txt  SConscript  childErrorStatus.hpp  child_error_status.cpp  child_error_status.hpp  config.cpp  config.hpp  execute.cpp  execute.hpp  libmain.cpp  logger.cpp  logger.hpp  main.cpp
test/: SConscript  child_error_status_test.cpp  config_test.cpp
